k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hf-home-finance-svc

spec:
  selector:
    app: home-finance-service

  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP

  type: ClusterIP
